<resources>
    <string name="app_name">U酷理财</string>
    <string name="et_account_hint">用户名</string>
    <string name="et_password_hint">密码</string>
    <string name="login">登录</string>
    <string name="register">新用户注册</string>
    <string name="forget_password">忘记密码?</string>
    <string name="title_forget_password_appeals">密码申诉</string>
    <string name="dialog_forget_password_appeals">是否填写确认密码保护问题，以找回密码</string>
    <string name="toast_empty_account_password">请输入正确的账户或者密码</string>
    <string name="toast_not_exist_account_password">不存在该账户，请先注册再使用</string>
    <string name="group">分组</string>
    <string name="all">全部</string>
    <string name="tv_xieyi_url">使用条款和隐私政策</string>
    <string name="tv_country">中国+86</string>
    <string name="et_phoneNumber_hint">请输入你的手机号码</string>
    <string name="btn_next">下一步</string>
    <string name="tv_xieyi">我已阅读并同意</string>
    <string name="title_phoneNumber">请输入电话号码</string>
    <string name="title_registerInformation">设置密码和昵称</string>
    <string name="back">返回</string>
    <string name="tv_register_username">用户名</string>
    <string name="tv_get_password_username">用户名</string>
    <string name="et_register_username">请输入用户名，6~18字符</string>
    <string name="tv_register_userpassword">密码</string>
    <string name="et_register_userpassword">请输入密码，6~18字符</string>
    <string name="tv_confirm_register_userpassword">确认密码</string>
    <string name="et_confirm_register_userpassword">请再次输入密码，6~18字符</string>
    <string name="toast_diff_confirm_register_userpassword">两次输入的密码不一致,请重新输入密码</string>
    <string name="tv_old_new_password_same">新密码和旧密码不能完全一样</string>
    <string name="et_get_password_like_number_hint">你喜欢的数字</string>
    <string name="et_likenumber_hint">请输入你喜欢的数字</string>
    <string name="tv_get_password_like_number">数字</string>
    <string name="tv_likenumber">请填写你喜欢的数字</string>
    <string name="et_goodFirendName_hint">你最好的朋友的名字</string>
    <string name="tv_get_password_good_friend">好朋友名字</string>
    <string name="tv_goodFirendName">填写你最好朋友的名字，以便更好的保护密码</string>
    <string name="et_get_password_good_friend_hint">你最好朋友的名字</string>
    <string name="et_likeFood_hint">请填写最喜欢的食物的名称</string>
    <string name="et_get_password_good_food_hint">你最喜欢的食物的名称</string>
    <string name="tv_get_password_good_food">食物名称</string>
    <string name="tv_likeFood">填写你最喜欢的食物，以便更好的保护密码</string>
    <string name="register_complete">完成</string>
    <string name="title_register_info">设置密码保护问题</string>
    <string name="toast_password_security_not_all_empty">请至少填写一个密保问题</string>
    <string name="dialog_get_password_security_empty">请输入密保问题</string>
    <string name="tv_new_register_ok">你已成功注册新用户</string>
    <string name="tv_register_ok_result">必须遵循相关法律法规，我已阅读并同意</string>
    <string name="btn_register_success">返回登录界面</string>
    <string name="tv_register_success">注册完成</string>
    <string name="tv_tiaokuan">服务声明</string>
    <string name="toast_db_been_builded">该用户已被注册，请注册其他用户</string>

    <string name="title_new_add_out_account">新增支出</string>
    <string name="title_new_add_in_account">新增收入</string>
    <string name="title_add_new_flag">新增便签</string>
    <string name="tv_money">金  额：</string>
    <string name="tv_time">时  间：</string>
    <string name="tv_type">类  别：</string>
    <string name="tv_address">地  点：</string>
    <string name="tv_mark">备  注：</string>
    <string name="tv_InHandler">付款方：</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_save">保存</string>
    <string name="btn_certain">确定</string>
    <string name="btn_delete">删除</string>
    <string name="btn_change">修改</string>

    <string name="toast_add_new_outaccount_success">〖新增支出〗数据添加成功！</string>
    <string name="toast_add_new_inaccount_success">〖新增收入〗数据添加成功！</string>
    <string name="toast_input_the_outmoney">请输入支出金额！</string>
    <string name="toast_input_the_inmoney">请输入收入金额！</string>

    <string name="title_my_out_account">我的支出</string>
    <string name="title_out_account_manage">支出管理</string>
    <string name="title_in_account_manage">收入管理</string>
    <string name="toast_the_data_change_success">〖数据〗修改成功！</string>
    <string name="toast_the_data_delete_success">〖数据〗删除成功！</string>

    <string name="btn_outaccount_info">支出信息</string>
    <string name="btn_inaccount_info">收入信息</string>
    <string name="btn_flag_info">便签信息</string>
    <string name="btn_flag_data_change_success">〖便签数据〗修改成功！</string>
    <string name="btn_flag_data_delete_success">〖便签数据〗删除成功！</string>
    <string name="tv_input_flag">请输入便签，最多输入200字</string>
    <string name="tv_flag_manage">便签管理</string>
    <string name="tv_please_input_flag_limit">请输入便签，最多输入200字</string>
    <string name="title_in_account">我的收入</string>
    <string name="toast_set_password_success">〖密码〗修改成功！</string>
    <string name="toast_password_can_not_null">〖密码〗不能为空！</string>
    <string name="toast_add_flag_data_success">〖新增便签〗数据添加成功！</string>
    <string name="toast_please_input_flag">请输入便签！</string>
    <string name="menu_option_system_setting">修改密码</string>
    <string name="menu_option_retreat_safely">安全退出</string>

    <string name="toast_delete_not_register_database_failed">由于系统出错，此用户暂时不能被注册，请直接注册其他用户</string>
    <string name="tv_old_password">旧密码</string>
    <string name="et_old_pasword">请输入旧密码，6~18字符</string>
    <string name="tv_new_password">新密码</string>
    <string name="et_new_password">请输入新密码，6~18字符</string>
    <string name="tv_confirm_new_password">确认密码</string>
    <string name="et_confirm_new_password">请再次输入新密码，6~18字符</string>
    <string name="btn_change_password">确认修改密码</string>
    <string name="btn_get_password_confirm">确认找回密码</string>
    <string name="title_change_password">修改密码</string>
    <string name="toast_old_password_error">旧密码输入错误，请重新输入</string>
    <string name="title_get_password_info">找回密码</string>
    <string name="content_get_password_user_name_null">用户名不能为空，请填写要申诉找回密码的用户名。</string>
    <string name="content_get_password_user_name_not_exist">想要找回密码的用户名从未被注册过，不能执行找回密码，请确认填写正确的用户名。</string>
    <string name="content_get_password_question_empty">不能所有的密保问题为空，请务必正确填写密保问题</string>
    <string name="content_get_password_question_right_before">您的密码是:  </string>
    <string name="content_get_password_question_right_after">  请妥善保管</string>
    <string name="dialog_login_redmine">登录信息提示</string>
    <string name="dialog_info_redmine">信息提醒</string>

</resources>
