<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <!--状态栏-->
    <com.example.financialmanagement.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_height="60dp"
        android:layout_width="match_parent"/>
    <!--最喜欢的数字-->
    <EditText
        android:id="@+id/et_likenumber"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:padding="5dp"
        android:hint="@string/et_likenumber_hint"
        android:background="@drawable/register_phone_bg"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/gray_font"
        android:textSize="16sp"
        android:text="@string/tv_likenumber"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>

    <!--最好的朋友-->
    <EditText
        android:id="@+id/et_goodFirendName"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:inputType="text"
        android:padding="5dp"
        android:hint="@string/et_goodFirendName_hint"
        android:background="@drawable/register_phone_bg"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/gray_font"
        android:textSize="16sp"
        android:text="@string/tv_goodFirendName"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>

    <!--最喜欢的食物-->
    <EditText
        android:id="@+id/et_likeFood"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:inputType="text"
        android:padding="5dp"
        android:hint="@string/et_likeFood_hint"
        android:background="@drawable/register_phone_bg"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/gray_font"
        android:textSize="16sp"
        android:text="@string/tv_likeFood"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>

    <!--完成按钮-->
    <Button
        android:id="@+id/register_complete"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_btn"
        android:textSize="18sp"
        android:textColor="@color/whites"
        android:text="@string/register_complete"/>

</LinearLayout>
