<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <com.example.financialmanagement.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_height="60dp"
        android:layout_width="match_parent"/>

    <!--旧密码-->
    <LinearLayout
        android:id="@+id/ll_new_username"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:background="@drawable/register_phone_bg">
        <TextView
            android:layout_height="60dp"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/tv_old_password"
            android:textColor="@color/blue"
            android:textSize="16sp"/>
        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/devide_line"/>
        <EditText
            android:id="@+id/et_old_password"
            android:layout_height="56dp"
            android:layout_width="match_parent"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/et_old_pasword"
            android:background="@android:color/white"
            android:padding="5dp"/>
    </LinearLayout>

    <!--新密码-->
    <LinearLayout
        android:id="@+id/ll_new_password"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:background="@drawable/register_phone_bg">
        <TextView
            android:layout_height="60dp"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/tv_new_password"
            android:textColor="@color/blue"
            android:textSize="16sp"/>
        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/devide_line"/>
        <EditText
            android:id="@+id/et_new_password"
            android:layout_height="56dp"
            android:layout_width="match_parent"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:inputType="textPassword"
            android:hint="@string/et_new_password"
            android:background="@android:color/white"
            android:padding="5dp"/>
    </LinearLayout>

    <!--密码不相同提示信息-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_change_password_redmine_info"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <!--确认密码-->
    <LinearLayout
        android:id="@+id/ll_confirm_new_password"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:background="@drawable/register_phone_bg">
        <TextView
            android:layout_height="60dp"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/tv_confirm_new_password"
            android:textColor="@color/blue"
            android:textSize="16sp"/>
        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/devide_line"/>
        <EditText
            android:id="@+id/et_confirm_new_password"
            android:layout_height="56dp"
            android:layout_width="match_parent"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/et_confirm_new_password"
            android:background="@android:color/white"
            android:inputType="textPassword"
            android:padding="5dp"/>
    </LinearLayout>

    <!--下一步-->
    <Button
        android:id="@+id/btn_change_password"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:text="@string/btn_change_password"
        android:textSize="18sp"
        android:enabled="false"
        android:background="@drawable/acm_inputbox"/>

</LinearLayout>
