<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <com.example.financialmanagement.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_height="60dp"
        android:layout_width="match_parent"/>

    <!--用户名-->
    <LinearLayout
        android:id="@+id/ll_get_password_username"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:background="@drawable/register_phone_bg">
        <TextView
            android:layout_height="60dp"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/tv_get_password_username"
            android:textColor="@color/blue"
            android:textSize="16sp"/>
        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/devide_line"/>
        <EditText
            android:id="@+id/et_get_password_username"
            android:layout_height="56dp"
            android:layout_width="match_parent"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/tv_get_password_username"
            android:background="@android:color/white"
            android:padding="5dp"/>
    </LinearLayout>

    <!--喜欢的数字-->
    <LinearLayout
        android:id="@+id/ll_get_password_like_number"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:background="@drawable/register_phone_bg">
        <TextView
            android:layout_height="60dp"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/tv_get_password_like_number"
            android:textColor="@color/blue"
            android:textSize="16sp"/>
        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/devide_line"/>
        <EditText
            android:id="@+id/et_get_password_like_number"
            android:layout_height="56dp"
            android:layout_width="match_parent"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/et_get_password_like_number_hint"
            android:background="@android:color/white"
            android:padding="5dp"/>
    </LinearLayout>

    <!--好朋友的名字-->
    <LinearLayout
        android:id="@+id/ll_get_password_good_friend"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:background="@drawable/register_phone_bg">
        <TextView
            android:layout_height="60dp"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/tv_get_password_good_friend"
            android:textColor="@color/blue"
            android:textSize="16sp"/>
        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/devide_line"/>
        <EditText
            android:id="@+id/et_get_password_good_friend"
            android:layout_height="56dp"
            android:layout_width="match_parent"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/et_get_password_good_friend_hint"
            android:background="@android:color/white"
            android:padding="5dp"/>
    </LinearLayout>

    <!--食物名称-->
    <LinearLayout
        android:id="@+id/ll_get_password_good_food"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:background="@drawable/register_phone_bg">
        <TextView
            android:layout_height="60dp"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/tv_get_password_good_food"
            android:textColor="@color/blue"
            android:textSize="16sp"/>
        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/devide_line"/>
        <EditText
            android:id="@+id/et_get_password_good_food"
            android:layout_height="56dp"
            android:layout_width="match_parent"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/et_get_password_good_food_hint"
            android:background="@android:color/white"
            android:padding="5dp"/>
    </LinearLayout>

    <!--确认找回密码-->
    <Button
        android:id="@+id/btn_get_password_confirm"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:text="@string/btn_get_password_confirm"
        android:textSize="18sp"
        android:background="@drawable/acm_inputbox"/>

</LinearLayout>
