<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <com.example.financialmanagement.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_height="60dp"
        android:layout_width="match_parent"/>

    <!--注册用户名-->
    <LinearLayout
        android:id="@+id/ll_register_username"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:background="@drawable/register_phone_bg">
        <TextView
            android:layout_height="60dp"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/tv_register_username"
            android:textColor="@color/blue"
            android:textSize="16sp"/>
        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/devide_line"/>
        <EditText
            android:id="@+id/et_register_username"
            android:layout_height="56dp"
            android:layout_width="match_parent"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/et_register_username"
            android:background="@android:color/white"
            android:padding="5dp"/>
    </LinearLayout>

    <!--注册密码-->
    <LinearLayout
        android:id="@+id/ll_register_userpassword"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:background="@drawable/register_phone_bg">
        <TextView
            android:layout_height="60dp"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/tv_register_userpassword"
            android:textColor="@color/blue"
            android:textSize="16sp"/>
        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/devide_line"/>
        <EditText
            android:id="@+id/et_register_userpassword"
            android:layout_height="56dp"
            android:layout_width="match_parent"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:inputType="textPassword"
            android:hint="@string/et_register_userpassword"
            android:background="@android:color/white"
            android:padding="5dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_redmine_info"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <!--确认密码-->
    <LinearLayout
        android:id="@+id/ll_confirm_register_userpassword"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:background="@drawable/register_phone_bg">
        <TextView
            android:layout_height="60dp"
            android:layout_width="100dp"
            android:gravity="center"
            android:text="@string/tv_confirm_register_userpassword"
            android:textColor="@color/blue"
            android:textSize="16sp"/>
        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:background="@color/devide_line"/>
        <EditText
            android:id="@+id/et_confirm_register_userpassword"
            android:layout_height="56dp"
            android:layout_width="match_parent"
            android:layout_marginRight="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/et_confirm_register_userpassword"
            android:background="@android:color/white"
            android:inputType="textPassword"
            android:padding="5dp"/>
    </LinearLayout>

    <!--下一步-->
    <Button
        android:id="@+id/btn_next"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:text="@string/btn_next"
        android:textSize="18sp"
        android:enabled="false"
        android:background="@drawable/acm_inputbox"/>

    <!--确认协议-->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/checkbox_agreen"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:background="@drawable/checkbox"
            android:button="@null"
            android:checked="true"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/tv_xieyi"
            android:layout_marginLeft="5dp"
            android:textSize="16sp"/>
        <com.example.financialmanagement.view.TextURLView
            android:id="@+id/tv_url"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

</LinearLayout>
