<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <!--状态栏-->
    <com.example.financialmanagement.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_height="60dp"
        android:layout_width="match_parent"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        >
        <RelativeLayout android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10dp"
            >
            <TextView android:layout_width="90dp"
                android:id="@+id/tvMoney"
                android:textSize="20sp"
                android:text="@string/tv_money"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtMoney"
                android:layout_alignBottom="@+id/txtMoney"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp">
            </TextView>
            <EditText
                android:id="@+id/txtMoney"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvMoney"
                android:inputType="number"
                android:numeric="integer"
                android:maxLength="9"
                android:hint="0.00"
                />
            <TextView android:layout_width="90dp"
                android:id="@+id/tvTime"
                android:textSize="20sp"
                android:text="@string/tv_time"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtTime"
                android:layout_alignBottom="@+id/txtTime"
                android:layout_toLeftOf="@+id/txtMoney">
            </TextView>
            <EditText
                android:id="@+id/txtTime"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvTime"
                android:layout_below="@id/txtMoney"
                android:inputType="datetime"
                />
            <TextView android:layout_width="90dp"
                android:id="@+id/tvType"
                android:textSize="20sp"
                android:text="@string/tv_type"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/spType"
                android:layout_alignBottom="@+id/spType"
                android:layout_alignLeft="@+id/tvTime">
            </TextView>
            <Spinner android:id="@+id/spType"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvType"
                android:layout_below="@id/txtTime"
                android:entries="@array/outtype"
                />
            <TextView android:layout_width="90dp"
                android:id="@+id/tvAddress"
                android:textSize="20sp"
                android:text="@string/tv_address"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtAddress"
                android:layout_alignBottom="@+id/txtAddress"
                android:layout_toLeftOf="@+id/spType">
            </TextView>
            <EditText
                android:id="@+id/txtAddress"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvAddress"
                android:layout_below="@id/spType"
                android:singleLine="false"
                />
            <TextView android:layout_width="90dp"
                android:id="@+id/tvMark"
                android:textSize="20sp"
                android:text="@string/tv_mark"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txtMark"
                android:layout_toLeftOf="@+id/txtAddress">
            </TextView>
            <EditText
                android:id="@+id/txtMark"
                android:layout_width="210dp"
                android:layout_height="150dp"
                android:layout_toRightOf="@id/tvMark"
                android:layout_below="@id/txtAddress"
                android:gravity="top"
                android:singleLine="false"
                />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        >
        <RelativeLayout android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10dp"
            >
            <Button
                android:id="@+id/btnCancel"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:text="@string/btn_cancel"
                />
            <Button
                android:id="@+id/btnSave"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/btnCancel"
                android:text="@string/btn_save"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
