<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/flagmanage"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/tv_flag_manage"
            android:textSize="40sp"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        >
        <RelativeLayout android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dp"
            >
            <TextView android:layout_width="350dp"
                android:id="@+id/tvFlagManage"
                android:textSize="23sp"
                android:text="@string/tv_input_flag"
                android:textColor="#8C6931"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/txtFlagManage"
                android:layout_width="350dp"
                android:layout_height="400dp"
                android:layout_below="@id/tvFlagManage"
                android:gravity="top"
                android:singleLine="false"
                />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        >
        <RelativeLayout android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="10dp"
            >
            <Button
                android:id="@+id/btnFlagManageDelete"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:text="@string/btn_delete"
                />
            <Button
                android:id="@+id/btnFlagManageEdit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/btnFlagManageDelete"
                android:text="@string/btn_change"
                android:maxLength="200"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
